<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/RegistrarPantalla"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irRegistrarse"
                android:text="@string/btn_registrar_pantalla"
                tools:text="@string/btn_registrar_pantalla" />

            <Button
                android:id="@+id/IniciarSesionPantalla"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irIniciar"
                android:text="@string/btn_iniciar_pantalla"
                tools:text="@string/btn_iniciar_pantalla" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#00BCD4">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_noticias" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/periodico" />

                            <Button
                                android:id="@+id/noticias"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irNoticias"
                                android:text="@string/noticias_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#FFEB3B">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Los mejores consejos para ganaderos" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/chat" />

                            <Button
                                android:id="@+id/consejos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irConsejos"
                                android:text="@string/consejos_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#FF9800">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Descarga gratis libros sobre granaderia y agricultura" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/libro" />

                            <Button
                                android:id="@+id/libros"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/libros_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#8BC34A">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Conoce las diferentes razas de ganado bovino" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/vaca" />

                            <Button
                                android:id="@+id/razas"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irRazas"
                                android:text="@string/razas_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#009688">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Conoce los diferentes tipos de ganaderia que existen alrededor" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/ganado" />

                            <Button
                                android:id="@+id/tipos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irTipos"
                                android:text="@string/tipos_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#00FF99">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Todas las redes sociales importantes del momento" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                app:srcCompat="@drawable/facebook" />

                            <Button
                                android:id="@+id/Redes"
                                android:layout_width="80dp"
                                android:layout_height="70dp"
                                android:onClick="irFacebook"
                                android:text="Facebook"
                                app:iconTint="#E40B0B" />

                            <ImageView
                                android:id="@+id/imageView6"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                app:srcCompat="@drawable/gorjeo" />

                            <Button
                                android:id="@id/Redes"
                                android:layout_width="80dp"
                                android:layout_height="70dp"
                                android:onClick="irTwitter"
                                android:text="Twitter" />

                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                app:srcCompat="@drawable/instagram" />

                            <Button
                                android:id="@id/Redes"
                                android:layout_width="80dp"
                                android:layout_height="70dp"
                                android:onClick="irInstagram"
                                android:text="Instagram" />


                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>
        </TableLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>